--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   database:
     image: postgres:alpine
@@ -9,10 +9,11 @@ services:
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: memoire
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - scholarhub:/var/lib/postgresql/data
     ports:
       - 5432:5432
-    
+
   # pgadmin:
   #   image: dpage/pgadmin4:latest
   #   container_name: pgadmin
@@ -25,11 +26,14 @@ services:
   #   depends_on:
   #     - database
 
-  backend:
-    image: shirley/scholarhub:backend
-    container_name: backend
-    ports:
-      - '5000:5000'
-    command: sh -c "sleep 20s; python launch.py"
-    depends_on:
-      - database
+  # backend:
+  #   image: shirley/scholarhub:backend
+  #   container_name: backend
+  #   ports:
+  #     - '5000:5000'
+  #   command: sh -c "sleep 20s; python launch.py"
+  #   depends_on:
+  #     - database
+
+volumes:
+  scholarhub:
