👌 IMPROVE: Amelioration structurelle du projet

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:alpine
 EXPOSE 5000
-WORKDIR /scholarhub
-COPY . /scholarhub
+WORKDIR /backend
+COPY . /backend
 RUN pip install -r requirements.txt
 CMD python launch.py
 
