--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,4 +3,4 @@ EXPOSE 5001
 WORKDIR /frontend
 COPY . /frontend
 RUN pip install -r requirements.txt
-CMD python launch.py
+CMD ["gunicorn", "-b", ":5001", "run:app"]
