--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,8 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
         image: tafitashirley/scholarhub-backend
-        dockerfile: ./backend/Dockerfile
+        context: ./backend
+        dockerfile: Dockerfile
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
