--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,8 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: tafitashirley/scholarhub-backend
-          context: ./backend
-          dockerfile: ./backend/Dockerfile
           registry: docker.io
+          directory: ./backend/
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
