--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build and push to DockerHub
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          # directory: backend
+          directory: backend
           dockerfile: backend/Dockerfile
           registry: docker.io
           image: tafitashirley/scholarhub-backend
@@ -83,8 +83,9 @@ jobs:
       - name: Build and push to DockerHub
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: tafitashirley/scholarhub-frontend
-          dockerfile: ./frontend/Dockerfile
+          directory: frontend
+          dockerfile: frontend/Dockerfile
           registry: docker.io
+          image: tafitashirley/scholarhub-backend
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
