--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   backend:
+    name : Test, build and push backend
     runs-on: ubuntu-latest
     environment: TEST
     if: contains(github.event.head_commit.message, 'backend')
@@ -50,6 +51,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
   frontend:
+    name: Test, build and push frontend
     runs-on: ubuntu-latest
     environment: TEST
     if: contains(github.event.head_commit.message, 'frontend')
@@ -89,3 +91,15 @@ jobs:
           image: tafitashirley/scholarhub-frontend
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+  deployment:
+    name: Deployment to minikube
+    needs: [backend, frontend]
+    runs-on: ubuntu-latest
+    environment: TEST
+
+    steps:
+      - name: Place here the Minikube delpoyment action
+      - run: |
+          echo "Hello everyone !"
+    
