Update ci.yml frontend

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,8 @@ jobs:
     environment: TEST
 
     steps:
+      - uses: actions/checkout@v3
+      
       - name: Place here the Minikube delpoyment action
       - run: |
           echo "Hello everyone !"
