--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,6 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Place here the Minikube delpoyment action
-      - run: |
+        run: |
           echo "Hello everyone !"
     
