--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,4 +111,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Place here the Minikube delpoyment action
-        run: echo "Hop, deploy to Minikube !"
+        run: |
+          echo "Hop, deploy to Minikube !"
