--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: tafitashirley/scholarhub-backend
+          tags: $GITHUB_SHA
           directory: backend
           dockerfile: backend/Dockerfile
           registry: docker.io
@@ -62,7 +63,6 @@ jobs:
     name: Test, build and push frontend
     runs-on: ubuntu-latest
     environment: TEST
-    if: contains(github.event.head_commit.message, 'frontend')
 
     steps:
       - uses: actions/checkout@v3
@@ -73,6 +73,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
+        if: contains(github.event.head_commit.message, 'frontend')
         run: |
           cd frontend/
           python -m pip install --upgrade pip
@@ -80,6 +81,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with flake8
+        if: contains(github.event.head_commit.message, 'frontend')
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -87,19 +89,26 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Run frontend unit test
+        if: contains(github.event.head_commit.message, 'frontend')
         run: |
           cd frontend/
           python launch_tests.py
 
       - name: Build and push to DockerHub
+        if: contains(github.event.head_commit.message, 'frontend')
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: tafitashirley/scholarhub-frontend
+          tags: $GITHUB_SHA
           directory: frontend
           dockerfile: frontend/Dockerfile
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Do nothing
+        if: ${{ !contains(github.event.head_commit.message, 'frontend') }}
+        run: echo "The change on the commit do not affect frontend files"
 
   deployment:
     name: Deployment to minikube
