--- a/.github/workflows/mail-notif.yml
+++ b/.github/workflows/mail-notif.yml
@@ -4,12 +4,11 @@ on:
   pull_request:
     types:
       - opened
-    branches:
-      - test
 
 jobs:
   send-email:
     runs-on: ubuntu-latest
+    environment: TEST
 
     steps:
       - name: Checkout code
