--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:alpine
 EXPOSE 5000
-WORKDIR /backend
-COPY . /backend
-RUN pip install -r requirements.txt
-CMD ["gunicorn", "-b", ":5000", "run:app"]
 
+# ENV POSTGRES_USER=YWRtaW4=
+# ENV POSTGRES_DB=bWVtb2lyZQ==
+# ENV POSTGRES_PASSWORD=YWRtaW4=
+# ENV POSTGRES_HOST=bG9jYWxob3N0
+
+WORKDIR /backend
+COPY . /backend/
+RUN pip install --no-cache-dir -r requirements.txt
+CMD ["gunicorn", "-w", "5", "-b", ":5000", "launch:app", "--reload"]
