--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:alpine
 EXPOSE 5001
+
+# ENV BACKEND_HOST=bG9jYWxob3N0
+
 WORKDIR /frontend
-COPY . /frontend
-RUN pip install -r requirements.txt
-CMD ["gunicorn", "-b", ":5001", "run:app"]
+COPY . /frontend/
+
+RUN pip install --no-cache-dir -r requirements.txt
+CMD ["gunicorn", "-w", "5", "-b", ":5001", "launch:app", "--reload"]
