--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Update backend image tag in manifest
+        if: contains(github.event.head_commit.message, 'backend')
+        run: |
+          sed -i 's|tafitashirley/scholarhub-backend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-backend:${{ env.GITHUB_SHA }}|g' manifests/06-flask-backend.yaml
+
       - name: Do nothing
         if: ${{ !contains(github.event.head_commit.message, 'backend') }}
         run: echo "The change on the commit do not affect backend files"
@@ -106,6 +111,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Update frontend image tag in manifest
+        if: contains(github.event.head_commit.message, 'frontend')
+        run: |
+          sed -i 's|tafitashirley/scholarhub-frontend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-frontend:${{ env.GITHUB_SHA }}|g' manifests/07-flask-frontend.yaml
+
       - name: Do nothing
         if: ${{ !contains(github.event.head_commit.message, 'frontend') }}
         run: echo "The change on the commit do not affect frontend files"
@@ -125,19 +135,14 @@ jobs:
       - name: Try the cluster
         run: kubectl get pods -A
 
-      - name: Update backend image tag in manifest
-        if: contains(github.event.head_commit.message, 'backend')
+      - name: Check backend et frontend manifests
         run: |
-          sed -i 's|tafitashirley/scholarhub-backend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-backend:${{ env.GITHUB_SHA }}|g' manifets/06-flask-backend.yaml
-
-      - name: Update frontend image tag in manifest
-        if: contains(github.event.head_commit.message, 'frontend')
-        run: |
-          sed -i 's|tafitashirley/scholarhub-frontend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-frontend:${{ env.GITHUB_SHA }}|g' manifets/07-flask-frontend.yaml
+          cat manifests/06-flask-backend.yaml
+          cat manifests/07-flask-frontend.yaml
 
       - name: Deploy to minikube
         run: |
-          kubectl apply -f manifets/
+          kubectl apply -f manifests/
 
       - name: List all deployed services
         run: |
