--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,13 +55,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Update backend image tag in manifest
-        if: contains(github.event.head_commit.message, 'backend')
-        run: |
-          sed -i 's|tafitashirley/scholarhub-backend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-backend:${{ env.GITHUB_SHA }}|g' manifests/06-flask-backend.yaml
-          echo "Content after sed:"
-          cat manifests/06-flask-backend.yaml
-
       - name: Do nothing
         if: ${{ !contains(github.event.head_commit.message, 'backend') }}
         run: echo "The change on the commit do not affect backend files"
@@ -112,13 +105,6 @@ jobs:
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Update frontend image tag in manifest
-        if: contains(github.event.head_commit.message, 'frontend')
-        run: |
-          sed -i 's|tafitashirley/scholarhub-frontend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-frontend:${{ env.GITHUB_SHA }}|g' manifests/07-flask-frontend.yaml
-          echo "Content after sed:"
-          cat manifests/07-flask-frontend.yaml
           
       - name: Do nothing
         if: ${{ !contains(github.event.head_commit.message, 'frontend') }}
@@ -136,9 +122,23 @@ jobs:
       - name: Start minikube
         uses: medyagh/setup-minikube@latest
 
-      - name: Try the cluster
-        run: kubectl get pods -A
+      - name: Delete all existing resources
+        run: kubectl delete all --all
 
+      - name: Update backend image tag in manifest
+        if: contains(github.event.head_commit.message, 'backend')
+        run: |
+          sed -i 's|tafitashirley/scholarhub-backend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-backend:${GITHUB_SHA}|g' manifests/06-flask-backend.yaml
+          echo "Content after sed:"
+          cat manifests/06-flask-backend.yaml
+
+      - name: Update frontend image tag in manifest
+        if: contains(github.event.head_commit.message, 'frontend')
+        run: |
+          sed -i 's|tafitashirley/scholarhub-frontend:[a-zA-Z0-9_.-]*|tafitashirley/scholarhub-frontend:${GITHUB_SHA}|g' manifests/07-flask-frontend.yaml
+          echo "Content after sed:"
+          cat manifests/07-flask-frontend.yaml
+      
       - name: Deploy to minikube
         run: |
           kubectl apply -f manifests/
@@ -154,6 +154,3 @@ jobs:
           tr -s '[[:space:]]' '\n' |\
           sort |\
           uniq -c
-
-
-
