--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -150,15 +150,26 @@ jobs:
       - name: Delete all existing resources
         run: kubectl delete all --all
 
-      - name: Update backend image tag in manifest
-        if: contains(github.event.head_commit.message, 'backend')
+      - name: Configure AWS credentials
         run: |
-          sed -i -e "s|image: tafitashirley/scholarhub-backend:.*|image: tafitashirley/scholarhub-backend:$GITHUB_SHA|g" manifests/06-flask-backend.yaml
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set default.region ${{ secrets.AWS_REGION }}
+
+      - name: Download latest image tags from S3
+        run: |
+          aws s3 cp s3://scholarhub-s3/lastest-image-tag/backend-tag.txt backend-tag.txt
+          aws s3 cp s3://scholarhub-s3/lastest-image-tag/frontend-tag.txt frontend-tag.txt
+          LATEST_BACKEND_TAG=$(cat backend-tag.txt)
+          LATEST_FRONTEND_TAG=$(cat frontend-tag.txt)
+
+      - name: Update backend image tag in manifest
+        run: |
+          sed -i -e "s|image: tafitashirley/scholarhub-backend:.*|image: tafitashirley/scholarhub-backend:$LATEST_BACKEND_TAG|g" manifests/06-flask-backend.yaml
 
       - name: Update frontend image tag in manifest
-        if: contains(github.event.head_commit.message, 'frontend')
         run: |
-          sed -i -e "s|image: tafitashirley/scholarhub-frontend:.*|image: tafitashirley/scholarhub-frontend:$GITHUB_SHA|g" manifests/07-flask-frontend.yaml
+          sed -i -e "s|image: tafitashirley/scholarhub-frontend:.*|image: tafitashirley/scholarhub-frontend:$LATEST_FRONTEND_TAG|g" manifests/07-flask-frontend.yaml
       
       - name: Deploy to minikube
         run: |
