Modifier minikube.yml backend frontend

--- a/.github/workflows/minikube.yml
+++ b/.github/workflows/minikube.yml
@@ -186,3 +186,7 @@ jobs:
           tr -s '[[:space:]]' '\n' |\
           sort |\
           uniq -c
+
+      - name: Pause workflow in a few time
+        run: |
+          sleep 60
